
2020-12-24  Ron Norman <rjn@inglenet.com> 

	* Makefile.am,fisam.c,fileio.c,libcobxx.c: 
			Updates to build all INDEXED file handlers as shared code library

2020-12-23  Ron Norman <rjn@inglenet.com> 

	* Makefile.am: Updates to build most INDEXED file handlers
					as shared code library
	* coblocal.h: Updates to build INDEXED file handlers as shared library
	* fileio.h: Updates to build INDEXED file handlers as shared library
	* fileio.c: Updates to build INDEXED file handlers as shared library

2020-12-23  Ron Norman <rjn@inglenet.com>
	* call.c: added 'reason' parameter to cob_load_lib
	* fileio.c: Uses 'reason' if available when problem loading module

2020-12-22  Ron Norman <rjn@inglenet.com>
	* fisam.c:	Added isam_version to return the ISAM handler version
	* fbdb.c:	Added bdb_version to return the Berkley Database version
	* foci.c:	Added oci_version to return the Oracle version
	* fodbc.c:	Added odbc_version to return the ODBC version
	* fileio.h:	New io_version function pointer
	* fileio.c: added cob_io_version to load if needed and return 
				module version string
	* common.c:	Now calls each I/O module to get its version information

2020-12-21  Ron Norman <rjn@inglenet.com>
	* fisam.c: If isbuild returns EBADARG, then iserase and retry
	* fileio.c: More changes for "format=vbcisam"

2020-12-16  Ron Norman <rjn@inglenet.com>
	* common.h: Changes to handle VBISAM in CISAM mode
	* common.c: Changes to report using VBISAM in CISAM mode
	* fileio.c: Changes to handle "format=vbcisam"
			    and to load libcobvc.so at startup
	* fisam.c: Changes for building with VBISAM in CISAM mode
	* Makefile.am: Changes for configure/build of VBISAM in CISAM mode
				
2020-12-15  Simon Sobisch <simonsobisch@gnu.org>

	Bug #692 missing output for DISPLAY WITH NO ADVANCING
	* termio.c (cob_accept): always flush to ensure buffered output is seen

2020-12-14  Ron Norman <rjn@inglenet.com>

	* fodbc.c: fixed problem with 'commit' not being done